Se agregan excepciones y algunos estilos

--- a/src/main/resources/static/listarOdontologo.html
+++ b/src/main/resources/static/listarOdontologo.html
@@ -11,9 +11,10 @@
     <script src="/js/getOdontologo.js"></script>
     <script src="/js/updateOdontologo.js"></script>
     <script src="/js/deleteOdontologo.js"></script>
+    <link rel="stylesheet" type= "text/css" href="/css/styles.css"/>
 
 </head>
-<body>
+<body id="cuerpo">
 <div class="container">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
