--- a/src/main/resources/static/listarPaciente.html
+++ b/src/main/resources/static/listarPaciente.html
@@ -11,9 +11,10 @@
   <script src="/js/getPaciente.js"></script>
   <script src="/js/deletePaciente.js"></script>
   <script src="/js/updatePaciente.js"></script>
+  <link rel="stylesheet" type= "text/css" href="/css/styles.css"/>
 
 </head>
-<body>
+<body id="cuerpo">
 <div class="container">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -61,9 +62,9 @@
 
   <div id="div_paciente_table">
     <h1>Pacientes</h1>
-    <div class="row col-md-8 table-responsive">
+    <div class="row col-md-12 table-responsive-xl">
       <table id="pacienteTable" class="table table-striped">
-        <thead>
+        <thead class="thead-dark">
         <tr>
           <th>Id</th>
           <th>Apellido</th>
