--- a/src/main/resources/static/listarTurno.html
+++ b/src/main/resources/static/listarTurno.html
@@ -11,10 +11,11 @@
     <script src="/js/getTurno.js"></script>
     <script src="/js/deleteTurno.js"></script>
     <script src="/js/updateTurno.js"></script>
+    <link rel="stylesheet" type= "text/css" href="/css/styles.css"/>
 
 
 </head>
-<body>
+<body id="cuerpo">
 <div class="container">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
