--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,9 +8,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type= "text/css" href="/css/styles.css"/>
 
 </head>
-<body>
+<body id="cuerpo">
 <div class="container">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
