--- a/src/main/resources/static/registrarTurno.html
+++ b/src/main/resources/static/registrarTurno.html
@@ -9,8 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="/js/postTurno.js"></script>
+    <link rel="stylesheet" type= "text/css" href="/css/styles.css"/>
 </head>
-<body>
+<body id="cuerpo">
 <div class="container">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
