--- a/src/main/resources/static/listarOdontologo.html
+++ b/src/main/resources/static/listarOdontologo.html
@@ -64,7 +64,7 @@
         <h1>Odontólogos</h1>
         <div class="row col-md-8 table-responsive">
             <table id="odontologoTable" class="table table-striped">
-                <thead>
+                <thead class="thead-dark">
                 <tr>
                     <th>Id</th>
                     <th>Número de Matrícula</th>
