--- a/src/main/resources/static/listarTurno.html
+++ b/src/main/resources/static/listarTurno.html
@@ -65,7 +65,7 @@
         <h1>Turnos</h1>
         <div class="row col-md-8 table-responsive">
             <table id="turnoTable" class="table table-striped">
-                <thead>
+                <thead class="thead-dark">
                 <tr>
                     <th>Id</th>
                     <th>Id paciente</th>
@@ -94,7 +94,7 @@
                 <h5>Paciente</h5>
                 <div class="form-group">
                     <label >Id:</label>
-                    <input type="text" class="form-control" id="paciente_id" readonly>
+                    <input type="text" class="form-control" id="paciente_id">
                 </div>
 
                 <div class="form-group">
@@ -105,7 +105,7 @@
                 <h5>Odontólogo</h5>
                 <div class="form-group">
                     <label >Id:</label>
-                    <input type="text" class="form-control" id="odontologo_id" readonly>
+                    <input type="text" class="form-control" id="odontologo_id">
                 </div>
 
                 <div class="form-group">
