Se corrigen los test y se agregan algunos estilos a las tablas

--- a/src/main/resources/static/listarOdontologo.html
+++ b/src/main/resources/static/listarOdontologo.html
@@ -70,7 +70,8 @@
                     <th>Número de Matrícula</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
-                    <th></th>
+                    <th>Modificar</th>
+                    <th>Eliminar</th>
                 </tr>
                 </thead>
                 <tbody id="odontologoTableBody">
