--- a/src/main/resources/static/listarPaciente.html
+++ b/src/main/resources/static/listarPaciente.html
@@ -62,7 +62,7 @@
 
   <div id="div_paciente_table">
     <h1>Pacientes</h1>
-    <div class="row col-md-12 table-responsive-xl">
+    <div class="row col-md-14 table-responsive">
       <table id="pacienteTable" class="table table-striped">
         <thead class="thead-dark">
         <tr>
@@ -70,14 +70,15 @@
           <th>Apellido</th>
           <th>Nombre</th>
           <th>Documento</th>
-          <th>Fecha de Ingreso</th>
+          <th>Fecha Ingreso</th>
           <th>Email</th>
           <th>Domicilio_id</th>
           <th>Calle</th>
           <th>Número</th>
           <th>Ciudad</th>
           <th>Departamento</th>
-          <th></th>
+          <th>Modificar</th>
+          <th>Eliminar</th>
         </tr>
         </thead>
         <tbody id="pacienteTableBody">
