--- a/src/main/resources/static/listarTurno.html
+++ b/src/main/resources/static/listarTurno.html
@@ -63,7 +63,7 @@
 
     <div id="div_turno_table">
         <h1>Turnos</h1>
-        <div class="row col-md-8 table-responsive">
+        <div class="row col-md-10 table-responsive">
             <table id="turnoTable" class="table table-striped">
                 <thead class="thead-dark">
                 <tr>
@@ -73,7 +73,8 @@
                     <th>Id odontólogo</th>
                     <th>Nombre odontólogo</th>
                     <th>Fecha</th>
-                    <th></th>
+                    <th>Modificar</th>
+                    <th>Eliminar</th>
                 </tr>
                 </thead>
                 <tbody id="turnoTableBody">
